# wordbird

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml
backend/: pyproject.toml
backend/src/wordbird/: cli.py  config.py  lsp.py  prompt.py
backend/src/wordbird/daemon/: __main__.py  context.py  daemon.py  menubar.py  overlay.py  permissions.py  recorder.py  typer.py
backend/src/wordbird/server/: __main__.py  history.py  postprocess.py  server.py  transcriber.py
backend/tests/: test_config.py  test_context.py  test_history.py  test_lsp.py  test_models.py  test_prompt.py  test_recorder.py  test_warmup.py  test_web.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: combobox-input.tsx  settings-dialog.tsx  stats-bar.tsx  transcript-list.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: api.ts
playground/: overlay_demo.py  test_window.py
src/birdword/: __main__.py  cli.py  config.py  context.py  daemon.py  history.py  menubar.py  notify.py  overlay.py  permissions.py  postprocess.py  prompt.py  recorder.py  transcriber.py  typer.py  web.py
src/birdword/templates/: index.html
src/paracorder/: cli.py  daemon.py  permissions.py  recorder.py  typer.py
src/wordbird/: cli.py  context.py  daemon.py  menubar.py  notify.py  overlay.py  permissions.py  postprocess.py  prompt.py  web.py
src/wordbird/templates/: index.html
tests/: test_config.py  test_context.py  test_history.py  test_prompt.py  test_recorder.py  test_web.py
vscode/: Makefile  README.md  package.json  tsconfig.json
vscode-extension/: .vscodeignore  README.md  package.json
vscode-extension/src/: extension.ts
vscode/src/: extension.ts
zed-extension/: Cargo.toml  extension.toml
zed-extension/src/: lib.rs
